# StaffChat

./: README.md  pyproject.toml
src/endstone_staffchat/: __init__.py  staffchat.py
