[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-staffchat"
version = "0.1.0"
description = "Python staff chat plugin for endstone"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "chat", "staffchat"]

[project.entry-points."endstone"]
motde = "endstone_staffchat:StaffChat"